<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:contentDescription="@string/game_over"
        android:src="@drawable/ic_win" />

    <TextView
        android:id="@+id/tv_required_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:text="@string/required_quantity" />

    <TextView
        android:id="@+id/tv_score_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:text="@string/score_answer" />

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:text="@string/required_percentage" />

    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:text="@string/score_percentage" />


    <Button
        android:id="@+id/btn_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/retry"/>
</LinearLayout>