<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_brain"
            android:contentDescription="@string/welcome_logo"
            android:layout_weight="2">
        </ImageView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/composition_of_the_number"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/tv_rules"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rules"
            android:textSize="16sp"
            android:layout_margin="16dp"
            android:textColor="@color/black">
        </TextView>

        <Button
            android:id="@+id/btn_understand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="center">

        </Button>
    </LinearLayout>

</ScrollView>